# Robotics-Control-Lab-4.1

./: README.md  gazebo_joint_states.csv  pyproject.toml  replay_csv_to_gazebo.py  run_mujoco_simulation2.py  run_mujoco_simulation_startingpose.py  so101_mujoco_pid_utils.py  so101_mujoco_utils2.py
simulation_code-1/simulation_code/: mujoco_simulation.py  run_mujoco_simulation.py  so101_mujoco_utils.py
simulation_code-1/simulation_code-1/simulation_code/: so101_control.py  so101_ros_bridge.py
simulation_code-1/simulation_code-1/simulation_code/model/: scene_urdf.xml
simulation_code-1/simulation_code/logs/: mujoco_commands.csv
simulation_code-1/simulation_code/model/: robot_from_urdf.xml
